--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -8,7 +8,7 @@
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
 
@@ -251,9 +251,14 @@
                 <button type="submit" class="btn"> Send <i class="fas fa-paper-plane"></i> </button>
 
             </form>
-
         </div>
-
+        <div class="sociocons">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fa fa-github"></a>
+            <a href="#" class="fa fa-linkedin"></a>
+            <a href="#" class="fa fa-quora"></a>
+        </div>
     </section>
 
     <!-- contact section ends -->
