--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -253,11 +253,11 @@
             </form>
         </div>
         <div class="sociocons">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-youtube"></a>
-            <a href="#" class="fa fa-github"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-quora"></a>
+            <a href="https://www.facebook.com/profile.php?id=100064222097252" class="fa fa-facebook"></a>
+            <a href="https://youtube.com/channel/UC_frSvfCSkOpWw9fEhEKmRg" class="fa fa-youtube"></a>
+            <a href="https://github.com/AnkitChatterjee30" class="fa fa-github"></a>
+            <a href="https://www.linkedin.com/in/ankit-chatterjee-99233321a" class="fa fa-linkedin"></a>
+            <a href="https://www.quora.com/profile/Ankit-Chatterjee-67" class="fa fa-quora"></a>
         </div>
     </section>
 
