--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- custom css file link  -->
     <link rel="stylesheet" href="style.css">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 </head>
 
@@ -158,37 +159,41 @@
         <div class="box-container">
 
             <div class="box">
+                <i class="fas fa-chart-bar"></i>
                 <img src="Banking.png" alt="">
+                <h3><b><u>Banking Full stack Website :</u></b></h3>
+                <p>A full-stack banking system using Flask where you can create account,
+                    perform transactions, check balance, check different transactions. Made
+                    using HTML, CSS, Flask, and Python.</p>
             </div>
-            <div class="banking">
-                <b><u>Banking Full stack Website :</u></b>
-                A full-stack banking system using Flask where you can create account,
-                perform transactions, check balance, check different transactions. Made
-                using HTML, CSS, Flask, and Python.
-            </div>
-            <div class="vl"></div>
+
+
+
+
             <div class="box">
+                <i class='fas fa-chart-line'></i>
                 <img src="Multiple Disease.png" alt="">
+                <h3><b><u>Multiple Disease Prediction System <em>(Group Project)</em> :</b></u></h3>
+                <p>A responsive website where you can predict about the diagnosis of
+                    various lifestyle diseases (Heart, Breast Cancer, Parkinson's, CKD,
+                    Diabetes) using different supervised machine learning algorithms with a
+                    very high precision and accuracy.</p>
             </div>
-            <div class="multiple">
-                <b><u>Multiple Disease Prediction System <i>(Group Project)</i> :</b></u>
-                A responsive website where you can predict about the diagnosis of
-                various lifestyle diseases (Heart, Breast Cancer, Parkinson's, CKD,
-                Diabetes) using different supervised machine learning algorithms with a
-                very high precision and accuracy
-            </div>
-            <div class="vl"></div>
+
+
             <div class="box">
+                <i class="fas fa-chart-pie"></i>
                 <img src="Coffee.png" alt="">
+                <h3><b><u>Coffee Shop Full Stack Website</b> :</u></h3>
+                <p>A full-stack coffee website where you can order different types of coffee
+                    items, snacks using html, CSS and JavaScript, the website is fully
+                    responsive and has got various functionalities. The prices and discounts
+                    will be calculated in the snacks page. <a
+                        href="https://ankitchatterjee30.github.io/CoffeeShop/Coffee%20Shop/">Visit here</a></p>
             </div>
-            <div class="coffee">
-                <b><u>Coffee Shop Full Stack Website</b> :</u>
-                A full-stack coffee website where you can order different types of coffee
-                items, snacks using html, CSS and JavaScript, the website is fully
-                responsive and has got various functionalities. The prices and discounts
-                will be calculated in the snacks page. <a
-                    href="https://ankitchatterjee30.github.io/CoffeeShop/Coffee%20Shop/">Visit here</a>
-            </div>
+
+
+            
 
 
         </div>
