--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -160,11 +160,12 @@
 
             <div class="box">
                 <i class="fas fa-chart-bar"></i>
-                <img src="Banking.png" alt="">
+                <div class="boss"><img src="Banking.png" alt=""></div>
                 <h3><b><u>Banking Full stack Website :</u></b></h3>
                 <p>A full-stack banking system using Flask where you can create account,
                     perform transactions, check balance, check different transactions. Made
-                    using HTML, CSS, Flask, and Python.</p>
+                    using HTML, CSS, Flask, and Python. The interface is completely web-based and the functionalities
+                    are performed using python data structures.</p>
             </div>
 
 
@@ -172,7 +173,7 @@
 
             <div class="box">
                 <i class='fas fa-chart-line'></i>
-                <img src="Multiple Disease.png" alt="">
+                <div class="boss"> <img src="Multiple Disease.png" alt=""></div>
                 <h3><b><u>Multiple Disease Prediction System <em>(Group Project)</em> :</b></u></h3>
                 <p>A responsive website where you can predict about the diagnosis of
                     various lifestyle diseases (Heart, Breast Cancer, Parkinson's, CKD,
@@ -183,7 +184,7 @@
 
             <div class="box">
                 <i class="fas fa-chart-pie"></i>
-                <img src="Coffee.png" alt="">
+                <div class="boss"><img src="Coffee.png" alt=""></div>
                 <h3><b><u>Coffee Shop Full Stack Website</b> :</u></h3>
                 <p>A full-stack coffee website where you can order different types of coffee
                     items, snacks using html, CSS and JavaScript, the website is fully
@@ -193,7 +194,7 @@
             </div>
 
 
-            
+
 
 
         </div>
