--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -206,25 +206,36 @@
     <section class="skills" id="skills">
 
         <h1 class="heading"> My <span> Technologies</span> </h1>
+        <div class="row">
+            <div class="column">
+                <img src="Python.png" alt="" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="Java.png" alt="" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="Javascript.png" alt="" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="DS.png" alt="" style="width:100%">
+            </div>
+        </div>
+        <div class="row">
+            <div class="column">
+                <img src="HTML.png" alt="" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="CSS.png" alt="" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="Bootstrap.png" alt="" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="Flask.png" alt="" style="width:100%">
+            </div>
+        </div>
 
 
-        <!-- <p>HTML</p> -->
-        <ul class="ula">
-            <li class="lia"><img src="Python.png" class="imgpython" alt=""></li>
-            <li class="lib"><img src="Java.png" class="imgjava" alt=""></li>
-            <li class="lic"><img src="Flask.png" class="imgflask" alt=""></li>
-            <li class="lid"><img src="DS.png" class="imgDS" alt=""></li>
-        </ul>
-        <br>
-        <br>
-        <br>
-        <br>
-        <ul>
-            <li class="lie"><img src="HTML.png" class="imghtml" alt=""></li>
-            <li class="lif"><img src="CSS.png" class="imgcss" alt=""></li>
-            <li class="lig"><img src="Bootstrap.png" class="imgboot" alt=""></li>
-            <li class="lih"><img src="Javascript.png" class="imgjavascript" alt=""></li>
-        </ul>
 
     </section>
 
