--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -253,7 +253,8 @@
 
                 <div class="info">
                     <h3> <i class="fas fa-envelope"></i> ankitchatterjee30@gmail.com </h3>
-                    <h3> <i class="fas fa-phone"></i> +947-593-7912 </h3>
+                    <h3> <i class="fas fa-phone-alt"></i> +123-456-7890 </h3>
+                    <h3> <i class="fas fa-phone-alt"></i> +111-222-3333 </h3>
                     <h3> <i class="fas fa-map-marker-alt"></i> Durgapur, India - 713205. </h3>
                 </div>
 
@@ -275,6 +276,7 @@
             <a href="https://github.com/AnkitChatterjee30" class="fa fa-github"></a>
             <a href="https://www.linkedin.com/in/ankit-chatterjee-99233321a" class="fa fa-linkedin"></a>
             <a href="https://www.quora.com/profile/Ankit-Chatterjee-67" class="fa fa-quora"></a>
+            <a href="tel:9475937912" class="fa fa-phone"></a>
         </div>
     </section>
 
