--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -255,7 +255,7 @@
                     <h3> <i class="fas fa-envelope"></i> ankitchatterjee30@gmail.com </h3>
                     <h3> <i class="fas fa-phone-alt"></i> +123-456-7890 </h3>
                     <h3> <i class="fas fa-phone-alt"></i> +111-222-3333 </h3>
-                    <h3> <i class="fas fa-map-marker-alt"></i> Durgapur, India - 713205. </h3>
+                    <h3> <i class="fas fa-map-marker-alt"></i> Durgapur, West Bengal. </h3>
                 </div>
 
             </div>
