--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -71,7 +71,7 @@
 
             <div class="info">
                 <h3> <span> Name : </span> Ankit Chatterjee </h3>
-                <h3> <span> Age : </span> 21 </h3>
+                <h3> <span> Age : </span> 20 </h3>
                 <h3> <span> Qualification : </span> B.Tech (pursuing currently) </h3>
                 <h3> <span> Languages : </span> English, Bengali, Hindi </h3>
                 <h3> <span>Programming languages :</span> Python, Java, C</h3>
@@ -128,7 +128,7 @@
 
 
             <div class="box">
-                <i class="fas fa-graduation-cap"></i>
+                <i class="fas fa-laptop-code"></i>
                 <span>2018-20</span>
                 <h3>D.A.V. Model School, Durgapur</h3>
                 <p>After successfully passing my 10th, I studied my 11th & 12th in the same school itself, D.A.V. Model
@@ -137,7 +137,7 @@
 
 
             <div class="box">
-                <i class="fas fa-graduation-cap"></i>
+                <i class="fas fa-user-graduate"></i>
                 <span>2020-Present</span>
                 <h3>Dr. B.C. Roy Engineering College, Durgapur</h3>
                 <p>After class 12th, I appeared for wbjee examination and got admitted at this college with decent rank
@@ -189,8 +189,9 @@
                 <p>A full-stack coffee website where you can order different types of coffee
                     items, snacks using html, CSS and JavaScript, the website is fully
                     responsive and has got various functionalities. The prices and discounts
-                    will be calculated in the snacks page. <a
-                        href="https://ankitchatterjee30.github.io/CoffeeShop/Coffee%20Shop/">Visit here</a></p>
+                    will be calculated in the snacks page. <button class="btn"><a
+                            href="https://ankitchatterjee30.github.io/CoffeeShop/Coffee%20Shop/">Visit here</a></button>
+                </p>
             </div>
 
 
