--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -260,12 +260,13 @@
 
             </div>
 
-            <form action="">
+            <form action="" id="contactform">
 
-                <input type="text" placeholder="Name" class="box">
-                <input type="email" placeholder="Email" class="box">
-                <input type="text" placeholder="Project" class="box">
-                <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="Message"></textarea>
+                <input type="text" id="text" placeholder="Name" class="box">
+                <input type="email" id="emailid" placeholder="Email" class="box">
+                <input type="text" id="project" placeholder="Project" class="box">
+                <textarea name="" id="msgcontent" cols="30" rows="10" class="box message"
+                    placeholder="Message"></textarea>
                 <button type="submit" class="btn"> Send <i class="fas fa-paper-plane"></i> </button>
 
             </form>
@@ -301,9 +302,11 @@
 
     <!-- jquery cdn link  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <!-- custom js file link  -->
     <script src="script.js"></script>
+    <script src="message.js"></script>
 
 
 </body>
