--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -262,9 +262,9 @@
 
             <form action="" id="contactform">
 
-                <input type="text" id="text" placeholder="Name" class="box">
-                <input type="email" id="emailid" placeholder="Email" class="box">
-                <input type="text" id="project" placeholder="Project" class="box">
+                <input type="text" id="text" placeholder="Name" class="box" autocomplete="off">
+                <input type="email" id="emailid" placeholder="Email" class="box" autocomplete="off">
+                <input type="text" id="project" placeholder="Project" class="box" autocomplete="off">
                 <textarea name="" id="msgcontent" cols="30" rows="10" class="box message"
                     placeholder="Message"></textarea>
                 <button type="submit" class="btn"> Send <i class="fas fa-paper-plane"></i> </button>
