--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -215,7 +215,7 @@
                 <img src="Java.png" alt="" style="width:100%">
             </div>
             <div class="column">
-                <img src="Javascript.png" alt="" style="width:100%">
+                <img src="Javascript.png" alt="" style="width:100%;  filter: drop-shadow(1px 1px 1px azure);">
             </div>
             <div class="column">
                 <img src="DS.png" alt="" style="width:100%">
@@ -232,7 +232,7 @@
                 <img src="Bootstrap.png" alt="" style="width:100%">
             </div>
             <div class="column">
-                <img src="Flask.png" alt="" style="width:100%">
+                <img src="Flask.png" alt="" style="width:100%; filter: drop-shadow(1px 1px 1px azure);">
             </div>
         </div>
 
