--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -50,7 +50,7 @@
 
         <h3>Hello Everyone</h3>
         <h1>I'M <span>Ankit Chatterjee</span></h1>
-        <h2 style="margin-top: 20px; font-size: 2.5rem; color: antiquewhite;">I'm a <span class="auto-type"></span></h2>
+        <h2 style="margin-top: 20px; font-size: 2.5rem; color: antiquewhite;">I'm a/ an <span class="auto-type"></span></h2>
         <p>I'm a B.Tech CSE undergrad, from Dr. B.C. Roy Engineering College, Durgapur. This is the home Page of my
             Portfolio website.
             I'm skilled in Frontend Web Development and Python Programming language.
