--- a/Port Folio/index.html
+++ b/Port Folio/index.html
@@ -75,7 +75,7 @@
                 <h3> <span> Qualification : </span> B.Tech (pursuing currently) </h3>
                 <h3> <span> Languages : </span> English, Bengali, Hindi </h3>
                 <h3> <span>Programming languages :</span> Python, Java, C</h3>
-                <h3> <span>Domain :</span> Frontend Web Development, Machine Learning, Data Science, Python Development</h3>
+                <h3> <span>Domain :</span> Frontend Web Development, Machine Learning, Data Science, Python Development, Unqork Development</h3>
                 <a href="Ankit-resume Corporate.pdf"><button class="btn"> Download CV <i class="fas fa-download"></i>
                 </button></a>
                 <a href="MLSC-ES-2024-Seminar-Proceedings.pdf"><button class="btn"> Research Paper<i class="fas fa-download"></i>
@@ -316,4 +316,5 @@
 </body>
 
 </html>
+
 
